# JLauncher

./: CMakeLists.txt  README.md
include/: main.h  manifest.rc
manifest/: manifest.rc  manifest.xml
resources/FileGuard/: app.h  main.h  resource.rc
resources/RxDoctor/: app.h  main.h  resource.rc
src/: main.cpp
